--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Run install.sh minimum
+      - name: Run install.sh --minimum --backup
         run: ./install.sh --minimum --backup
       - name: Load .bashrc
         run: |
